Prgogress bars added and misalign bug fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,7 +53,7 @@ h1, h2, h3, h4 {
     display: inline-block;
 }
 
-.row-table {
+ .row-table {
     display: table;
 }
 
@@ -269,5 +269,28 @@ footer {
 .personal-info-item .value {
     position: relative;
     width: 60%;
-    
+
+}
+
+
+/* Progress bars  */
+
+.progress {
+    position: relative;
+    height: 25px;
+    margin-bottom: 4px;
+    line-height: normal;
+}
+
+.progress-type {
+    position: absolute;
+    left: 0px;
+    font-weight: 400;
+    padding: 3px 30px 6px 10px;
+    color: #fafafa;
+    background-color: rgba(25, 25, 25, 0.2);
+}
+
+.progress-bar-container {
+    margin: 40px 20px;
 }
